@@ -1,3 +1,8 @@
+2008-09-15  Tambet Ingo  <tambet@gmail.com>
+
+	* src/connection-editor/nm-connection-editor.c (populate_connection_ui): Fix
+	the connection editor crashing on any change to name or autoconnect widgets.
+
 2008-09-15  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-helpers.c
